semester2/object_oriented_programming/tps/.svn/pristine/60/60d497dd4478bca1d3bee3fb3c22ee5ba9623293.svn-base
./allumettes/StrategieNaive.java:6: error: cannot find symbol
		int val = Generateur.nb_Aleatoire(jeu);
		          ^
  symbol:   variable Generateur
  location: class StrategieNaive
./allumettes/StrategieExpert.java:18: error: cannot find symbol
			val = Generateur.nb_Aleatoire(jeu);
			      ^
  symbol:   variable Generateur
  location: class StrategieExpert
2 errors
